force-app/main/default/objects/Trailhead_Module__c/Trailhead_Module__c.object-meta.xml
<CustomObject>
    <label>Trailhead Module</label>
    <nameField>
        <displayFormat>M-{00000000}</displayFormat>
        <label>Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailhead Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>