force-app/main/default/objects/Trailhead_Module__c/fields/badge_icon__c.field-meta.xml
<CustomField>
    <fullName>badge_icon__c</fullName>
    <formula>IMAGE(badge_icon_url__c,  Title__c )</formula>
    <label>badge_icon</label>
    <type>Text</type>
</CustomField>