force-app/main/default/objects/Trailhead_Module__c/fields/badge_icon_url__c.field-meta.xml
<CustomField>
    <fullName>badge_icon_url__c</fullName>
    <label>badge_icon_url</label>
    <type>Url</type>
</CustomField>