force-app/main/default/objects/Trailhead_Module__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <description>Corresponds to created_at</description>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>