force-app/main/default/objects/Trailhead_Module__c/fields/Direct_Link__c.field-meta.xml
<CustomField>
    <fullName>Direct_Link__c</fullName>
    <description>Corresponds to web_url</description>
    <label>Direct Link</label>
    <type>Url</type>
</CustomField>