force-app/main/default/objects/Trailhead_Module__c/fields/Estimated_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_mins__c</fullName>
    <label>Estimated Time (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>