force-app/main/default/objects/Trailhead_Module__c/fields/Points_Available__c.field-meta.xml
<CustomField>
    <fullName>Points_Available__c</fullName>
    <label>Points Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>