force-app/main/default/objects/Trailhead_Module__c/fields/Points_Minute__c.field-meta.xml
<CustomField>
    <fullName>Points_Minute__c</fullName>
    <formula>Points_Available__c /  Estimated_Time_mins__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points/Minute</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>