force-app/main/default/objects/Trailhead_Module__c/fields/Salesforce_Internal__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Roles includes "Salesforce Employee"</description>
    <label>Salesforce Internal</label>
    <type>Checkbox</type>
</CustomField>