force-app/main/default/objects/Trailhead_Module__c/fields/Trailhead_ID__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_ID__c</fullName>
    <externalId>true</externalId>
    <label>Trailhead ID</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>