force-app/main/default/objects/Trailhead_Module__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Superbadge</fullName>
            </value>
            <value>
                <fullName>PeerAssessment</fullName>
            </value>
            <value>
                <fullName>Th::Project</fullName>
            </value>
            <value>
                <fullName>Th::Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>