force-app/main/default/objects/Trailhead_Module__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>Corresponds to updated_at</description>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>