force-app/main/default/objects/Trailhead_Module__c/listViews/Badges_with_points_and_times.listView-meta.xml
<ListView>
    <fullName>Badges_with_points_and_times</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Points_Available__c</columns>
    <columns>Estimated_Time_mins__c</columns>
    <columns>Points_Minute__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Badges with points and times</label>
    <language>en_US</language>
</ListView>